Bug 1589888 - Handle glyph buffering for color or synthetic-bold fonts with partial opacity on a per-glyphrun basis. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D52877

--HG--
extra : moz-landing-system : lando